fix: model usuario

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Iniciar Sesión | ServiDatos</title>
+        <title>Lista de usuarios | ServiDatos</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <link rel="stylesheet" href="https://unpkg.com/boltcss/bolt.min.css">
         <link type="text/css" rel="stylesheet" href="./css/styles.css">
