--- a/src/main/webapp/register.html
+++ b/src/main/webapp/register.html
@@ -22,12 +22,28 @@
                 <h2>Registro</h2>
                 <form action="FormRegisterSvt" method="POST">
                     <div class="div-input">
+                        <label for="name">Nombre completo</label>
+                        <input type="text" name="name" required placeholder="Juan...">
+                    </div>
+                    <div class="div-input">
+                        <label for="phone">Télefono</label>
+                        <input type="email" name="phone" required placeholder="320...">
+                    </div>
+                    <div class="div-input">
+                        <label for="address">Dirección</label>
+                        <input type="text" name="address" required placeholder="Avenida Colombia">
+                    </div>
+                    <div class="div-input">
                         <label for="email">Correo electrónico</label>
                         <input type="email" name="email" required placeholder="example@example.com">
                     </div>
                     <div class="div-input">
-                        <label for="password">Contraseña</label>
-                        <input type="password" name="password" required placeholder="***">
+                        <label for="again-email">Confirmar correo electrónico</label>
+                        <input type="email" name="again-email" required placeholder="***">
+                    </div>
+                    <div class="div-input">
+                        <label for="again-password">Contraseña</label>
+                        <input type="password" name="again-password" required placeholder="***">
                     </div>
                     <button>Enviar</button>
                 </form>
