feature: added servlet foListaUsuariosServlet

--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -25,7 +25,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
         <main>
             <section class="form-container">
                 <h2>Inicio de sesión</h2>
-                <form action="FormRegisterSvt" method="POST" id="formLogin">
+                <form action="FormLoginServlet" method="GET" id="formLogin">
                     <div class="div-input">
                         <label for="email">Correo electrónico</label>
                         <input type="email" name="email" required placeholder="example@example.com">
