--- a/src/main/webapp/register.html
+++ b/src/main/webapp/register.html
@@ -27,7 +27,7 @@
                     </div>
                     <div class="div-input">
                         <label for="phone">Télefono</label>
-                        <input type="email" name="phone" required placeholder="320...">
+                        <input type="text" name="phone" required placeholder="320...">
                     </div>
                     <div class="div-input">
                         <label for="address">Dirección</label>
@@ -39,11 +39,11 @@
                     </div>
                     <div class="div-input">
                         <label for="again-email">Confirmar correo electrónico</label>
-                        <input type="email" name="again-email" required placeholder="***">
+                        <input type="email" name="again-email" required placeholder="example@example.com">
                     </div>
                     <div class="div-input">
-                        <label for="again-password">Contraseña</label>
-                        <input type="password" name="again-password" required placeholder="***">
+                        <label for="password">Contraseña</label>
+                        <input type="password" name="password" required placeholder="***">
                     </div>
                     <button>Enviar</button>
                 </form>
